framework-res.apk: values
Set up image and text for Recovery Reboot Button

Signed-off-by: djb77 <dwayne.bakewell@gmail.com>

--- a/S7_Files/framework-res.apk/res/values/strings.xml
+++ b/S7_Files/framework-res.apk/res/values/strings.xml
@@ -2743,4 +2743,5 @@ USB functions may be restricted while Maximum power saving mode enabled."</strin
     <string name="storage_sdcard_insert">SD card has been inserted.</string>
     <string name="charging_connected_via_usb">Charging connected device via USB...</string>
     <string name="config_tspstate_threshold">10,32,768,10,60</string>
+    <string name="tw_ic_do_rebootrecovery">Recovery</string>
 </resources>
